# Rag_QA_System

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
app/clients/: milvus_utils.py  minio_utils.py  mongo_history_utils.py
app/conf/: embedding_config.py
app/core/: logger.py
app/import_process/agent/: main_graph.py  state.py
app/import_process/agent/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
app/import_process/api/: import_server.py
app/import_process/page/: import.html
app/lm/: embedding_utils.py  lm_utils.py
app/query_process/agent/: main_graph.py  state.py
app/query_process/agent/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_web_search_mcp.py
app/query_process/api/: query_server.py
app/query_process/page/: chat.html
app/query_process/sse/: sse_step_2.py
app/utils/: reranker_utils.py
prompts/: product_recognition_system.prompt
test/: 7.6.py  import_main.py  test_fastapi.py  test_graph_flow.py
