[project]
name = "dataset-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "flagembedding>=1.4.0",
    "grandalf>=0.8",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "magic-pdf>=1.3.12",
    "minio>=7.2.20",
    "modelscope>=1.37.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymilvus[model]>=3.0.0",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.17.0",
    "python-multipart>=0.0.32",
    "regex>=2026.5.9",
    "uvicorn[standard]>=0.49.0",
    "transformers>=4.57.6",
    "openai-agents>=0.4.2",
]
